#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package XtcInput
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-09-00
2013-03-29 Andy Salnikov
- add support for one-stream input of Xtc files

Tag: V00-08-03
2013-03-04 Andy Salnikov
- fixing doxygen comments fo XtcStreamMerger constructor

Tag: V00-08-02
2013-03-02 Andy Salnikov
- update tests for changes in API

Tag: V00-08-01
2013-03-01 Andy Salnikov
- re-apply changes in V00-07-03, make tag for nightly builds

Tag: V00-08-00
2013-03-01 Andy Salnikov
- undo V00-07-03 to make a tag for ana-0.7.x
- after introduction of read-ahead for headers current file name 
  does not make sense anymore
  - removed XtcStreamDgIter::m_file member and method 
    XtcStreamDgIter::chunkName()
  - added DgHeader::path() method which should be used instead 
    of XtcStreamDgIter::chunkName()
  - replace boost::filesystem::path with XtcFileName in DgHeader
  - XtcFileName adds extension() method
  - XtcStreamDgIter::next() return Dgram object instead of Dgram::ptr

Tag: V00-07-03
2013-02-12 Andy Salnikov
- use new Dataset functionality to find the list of files instead of
  own algorithm

Tag: V00-07-02
2013-01-21 Andy Salnikov
- bug fix in implementation of Shared file, assumed live data even 
  when file extension was not inprogress

Tag: V00-07-01
2013-01-17 Andy Salnikov
- implemented initial algorithm for header sorting in XtcStreamDgIter
- fixed all tests
- added new test for header sorting (test/XtcReadAheadTest.cpp)

Tag: V00-07-00
2013-01-16 Andy Salnikov
- preparing for datagram read-ahead and sorting, for now introduce
  new class DgHeader that will be used in read-ahead
- split XtcStreamDgIter into three classes: SharedFile, DgHeader and